// Copyright 2021 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package recipes.build.chromium.orchestrator;

message InputProperties {
  // Name of compilator builder that is triggered by this orchestrator build
  string compilator = 1;
  // For launching sub_builds with the infra/chromium/compilator_watcher cipd
  // package.
  // git revision is for repo https://chromium.googlesource.com/infra/infra
  string compilator_watcher_git_revision = 2;
}
